Fix comments visibility when editing post

--- a/src/styles/blocks/_card.scss
+++ b/src/styles/blocks/_card.scss
@@ -11,7 +11,7 @@
 
   &__container {
     position: relative;
-    margin: 3rem 0;
+    margin-bottom: 3rem;
   }
 
   &__back {
@@ -84,7 +84,7 @@
       border-right: 1px solid rgb(219, 219, 219);
     }
 
-    &:hover {
+    &:hover:not(:disabled) {
       color: rgb(48, 93, 77);
     }
 
