--- a/src/styles/util/_mixins.scss
+++ b/src/styles/util/_mixins.scss
@@ -6,7 +6,7 @@
     width: 768px;
   }
   @include media-min($desktop-width) {
-    width: 1170px;
+    width: 768px;
   }
 }
 
